test/libsolidity/syntaxTests/nameAndTypeResolution/invalid_fixed_types_0x7_mxn.sol
contract test {
    fixed0x7 a = .3;
}
// ----
// DeclarationError: (20-28): Identifier not found or not unique.
